syntax = "proto3";
option csharp_namespace = "Grpc.Protos";

package ExamManagement.Package;

import "google/protobuf/empty.proto";

service AccountGrpcService
{
	rpc GetCurrentUser(google.protobuf.Empty) returns (CurrentUserMessage);
	rpc LoginUser(LoginUserMessage) returns (LoginUserResultMessage);
	rpc RegisterSuperAdmin(RegisterSuperAdminMessage) returns (RegisterSuperAdminResultMessage);
	rpc CheckEmail(CheckEmailMessage) returns (CheckEmailResultMessage);
	rpc CheckUserName(CheckUserNameMessage) returns (CheckUserNameResultMessage);
	rpc RegisterDepartmentAdmin(RegisterDepartmentAdminMessage) returns (RegisterDepartmentAdminResultMessage);
	rpc RegisterStudent(RegisterStudentMessage) returns(RegisterStudentResultMessage);
	rpc LogOutUser(google.protobuf.Empty) returns (google.protobuf.Empty);
	rpc GetDepartmentUser(UserSearchMessage) returns (stream DepartmentUserMessage);
	rpc DeleteDepartmentAdminUser(DepartmentAdminIdMessage) returns (UserDeleteResultMessage);
	rpc GetStudentByBatch(FacultySearchMessage) returns (stream StudentMessage);
	rpc DeleteStudent(StudentIdMessage) returns (DeleteStudentResultMessage);
	rpc UpgradeStudentSemester(stream UpgradeStudentmessage) returns(UpgradeStudentResultmessage);
	rpc GetStudentInFaculty(AccFacultyIdMessage) returns (stream userDetailExtensionTemporayIdAndNameMessage);
	rpc GetCurrentStudent(google.protobuf.Empty) returns (CurrentStudentMessage);
	rpc SendResetPasswordEmail(CheckEmailAddressMessage) returns(google.protobuf.Empty);
	rpc ResetUserPassword(ResetPasswordMessage) returns(ResetPasswordResultMessage);
}

message CheckEmailAddressMessage
{
	string Email = 1;
}

message ResetPasswordMessage
{
	string userId = 1;
	string resetPasswordToken = 2;
	string password = 3;
}

message ResetPasswordResultMessage 
{
	bool success = 1;
	enum ResetPasswordErrorType
	{
		NoSuchUserFound = 0;
		InvalidToken = 1;
		CouldNotResetPassword = 2;
		NoAnyError = 3;
	}
	ResetPasswordErrorType PasswordResetErrorType = 2;
}

message CurrentStudentMessage 
{
	string firstName = 1;
	string lastName = 2;
	string registrationNumber = 3;
	string examNumber = 4;
	int32 rollNumber = 5;
	int32 batch = 6;
	string faculty = 7;
	string emailAddress = 8;
}

message AccFacultyIdMessage 
{
	int32 facultyId = 1;
}

message userDetailExtensionTemporayIdAndNameMessage 
{
	int32 userDetailExtensionSudentTemporaryId = 1;
	string firstName = 2;
	string lastName = 3;
}

message UpgradeStudentResultmessage
{
	bool success = 1;
	string message = 2;

}

message UpgradeStudentmessage
{
	int32 userDetailExtensionTemporayId = 1;
	int32 semester = 2;
}

message DeleteStudentResultMessage
{
	bool success = 1;
	string message = 2;
}

message StudentIdMessage
{
	string id = 1;
}

message FacultySearchMessage
{
	int32 facultyId = 1;
	string search = 2;
}

message StudentMessage
{
	int32 id = 1;
	string givenName = 2;
	string surName = 3;
	string emailAddress = 4;
	int32 batch= 5;
	string examNumber = 6;
	string applicationUserId = 7;
	string RegistrationNumber = 8;
	int32 semester = 9;
	int32 examYear= 10;
	int32 rollNumber = 11;
}

message UserDeleteResultMessage
{
	bool success = 1;
	string message = 2;
}

message DepartmentAdminIdMessage
{
	string UserId = 1;
}

message UserSearchMessage 
{
	string search = 1;
}

message DepartmentUserMessage
{
	string id = 1;
	string givenName = 2;
	string surName = 3;
	string userName = 5;
	string emailAddress = 6;
	string department = 7;
}

message CurrentUserMessage
{
	string id = 1;
	string givenName = 2;
	string surName = 3;
	string role = 4;
	string userName = 5;
	string emailAddress = 6;
	bool isSuccess = 7;
}

message LoginUserMessage
{
	string info = 1;
	string password = 2;
}

message LoginUserResultMessage
{
	bool success = 1;
	enum LoginErrorTypes
	{
		NoSuchUser = 0;
		IncorrectPassword = 1;
		NoAnyError = 2;
	}
	LoginErrorTypes LoginErrorType = 2;
}

message RegisterSuperAdminMessage 
{
	string givenName = 1;
	string surName = 2;
	string userName = 3;
	string email = 4;
	string password = 5;
}

message RegisterSuperAdminResultMessage
{
	bool success = 1;
	string message = 2;
}

message CheckEmailMessage
{
	string email = 1;
}

message CheckEmailResultMessage 
{
	bool Exists = 1;
}

message CheckUserNameMessage
{
	string userName = 1;
}

message CheckUserNameResultMessage 
{
	bool Exists = 1;
}

message RegisterDepartmentAdminMessage
{
	string givenName = 1;
	string surName = 2;
	string userName = 3;
	string email = 4;
	string password = 5;
	int32 facultyId = 6;
}

message RegisterDepartmentAdminResultMessage
{
	bool success = 1;
	string message = 2;
}

message RegisterStudentMessage
{
	string givenName = 1;
	string surName = 2;
	string userName = 3;
	string email = 4;
	string password = 5;
	int32 facultyId = 6;
	string registrationNumber = 7;
	string examNumber = 8;
	int32 examYear = 9;
	int32 batch = 10;
	int32 rollNumber = 11;
}

message RegisterStudentResultMessage
{
	bool success = 1;
	string message = 2;
}